# DIT168

./: .travis.yml  CONTRIBUTING.md  Dockerfile.armhf  README.md  V2VService.cpp  V2VService.hpp
Communication Example/: CMakeLists.txt  Dockerfile  PrimeChecker.cpp  PrimeChecker.hpp  TestPrimeChecker.cpp  helloworld.cpp  main.cpp
Odometer/: Odometer.cpp  messages.odvd
Vehicle_Control/: CMakeLists.txt  Dockerfile  Dockerfile.armhf  Main.cpp  VControl.cpp  VControl.hpp  docker-compose.yml  messages.odvd
car-V2V/: CMakeLists.txt  Dockerfile.armhf  V2VService.cpp  V2VService.hpp  docker-compose.yml  ip.py  ip_arg.txt  messages.odvd
communication/: CMakeLists.txt  Dockerfile  Reciever.cpp  Reciever.hpp  Sender.cpp  Sender.hpp  TestCommunication.cpp  main.cpp  messages.odvd
communicationV2/: Dockerfile  Sender.cpp  Sender.hpp
decision/: CMakeLists.txt  Decision.cpp  Decision.hpp  Dockerfile.armhf  messages.odvd
remote controller/Remote Control GUI/: CMakeLists.txt  README.md  VControl.cpp  VControl.hpp  main.cpp
remote controller/Remote Control Terminal/: CMakeLists.txt  RC.cpp  messages.odvd
src/: CMakeLists.txt  Reciever.cpp  Reciever.hpp  TestCommunication.cpp
v2v_protocol/: Messages.cpp  Messages.hpp  Messages.odvd  V2VService.cpp  V2VService.hpp  build_script.sh
web-visualization/: Dockerfile  README.md  index.html  script.sh  style.css
